# IITD_UV_Robot

./: README.md
App_APK/: OneDrive - Personal - Shortcut.lnk
Micron_challenge_Docs/: UV Robot Checklist.xlsx  UVC Dose Calculator.xlsx
Presentation/: Micron Technology’s UV-Robotic Design Challenge.pptx  ~$Final Presentation.pptx
Real_bot/: Test_3.webm
UV_Calculations/: Calculations for UVC lamps 1.docx  Calculations for UVC lamps.docx  UV-analysis.pptx  Uv cost.ppt
UV_Calculations/MATLAB Code/: calcAngles.m  calcIrradiance.m  createPointSource.m  createSurfacePoints.m  debug.m  main.m
Version 0/V0/src/GazeboV0/: CMakeLists.txt  package.xml
Version 0/V0/src/GazeboV0/launch/: display.launch  gazebo.launch  gazebo2.launch
Version 0/V0/src/GazeboV0/meshes/: FrontCastor.STL  RearCastorWheel.STL
Version 0/V0/src/GazeboV0/urdf/: GazeboV0.csv
Version 0/V0/src/GazeboV1/: package.xml
Version 0/V0/src/GazeboV1/launch/: display.launch
Version 0/V0/src/GazeboV1/meshes/: Camera.STL  Chassis.STL  FrontCastor.STL  LiDAR.STL  RearCastor.STL  RearCastorWheel.STL  TBS3.STL  TBS4.STL
Version 0/V0/src/GazeboV1/urdf/: GazeboV1.urdf
Voice_Command/: Voice Command Featurev3.docx
final_ws/devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
scripts/: Laser_IR_fuse.py  Laser_robo_obstruction_Laser_new.py  Minimum_range_IR.py  Video_publisher.py  battery.py  coordinates_multiple.py  coordinates_multiple_final.py  status.py  throttle.py  video.py
src/: README.md
src/uvbot_control/: package.xml
src/uvbot_description/: package.xml
(+3002 files in other folders)
